Adjust and correct photo spacing better

--- a/style.css
+++ b/style.css
@@ -99,10 +99,9 @@ background-color: #F9FAF8;
 display: flex;
 justify-content: center;
 align-items: center;
-gap: 20px;
 padding: 40px;
 text-align: center;
-
+gap: 100px;
 }
 
 .info img {
@@ -114,7 +113,7 @@ flex-shrink: 1;
 flex-grow: 1;
 border-radius: 5px;
 border: 3px solid rgb(235, 119, 106); 
-gap: 100px;
+
 }
 
 .section2 .info .text {
